data/derived/fa15/progs/unify/prog2013.ml.out
Characters 87-88:
  | Sine(q) -> sin(pi *. q)
                         ^
Error: This expression has type expr but an expression was expected of type
         float
